# math.rlib

./: .gitignore  AUTHORS  Cargo.toml  README.md
src/: angleparameterization.rs  arclenparameterization.rs  consts.rs  coordinate.rs  evaluate.rs  fixup.rs  get_control_points.rs  glif.rs  lib.rs  main.rs  mfek.rs  parameterization.rs  pattern_along_path.rs  polar.rs  primitive.rs  rect.rs  subdivide.rs  variable_width_stroking.rs
src/bezier/: evaluate.rs  flo.rs  mod.rs  primitive.rs
src/create_bazier/: mod.rs
src/dash_along_path/: mod.rs
src/fit_to_points/: get_control_points.rs  mod.rs
src/glyphbuilder/: mod.rs
src/interpolator/: evaluate.rs  mod.rs
src/linear_fit/: mod.rs
src/nib_stroking/: mod.rs
src/pattern_along_path/: mod.rs
src/piecewise/: evaluate.rs  glif.rs  mod.rs  skia.rs
src/quadbezier/: mod.rs
src/quick_hull/: algorithm.rs  mod.rs
src/rect/: flip_if_required.rs  mod.rs
src/simplify/: algorithm.rs  get_control_points.rs  mod.rs
src/variable_width_stroking/: mod.rs
src/vector/: conv.rs  flo.rs  glif.rs  mod.rs  skia.rs
tests/: get_control_points.rs  linear_fit.rs  nib_stroking.rs  simplify.rs  vector_conv.rs
tests/data/: nib.glif  nib2.glif
