[package]
name = "MFEKmath"
version = "0.1.0"
authors = ["Matthew Blanchard <matthewrblanchard@gmail.com>", "Fredrick R. Brennan <copypasteⒶkittens.ph>", "MFEK Authors"]
edition = "2018"
license = "Apache-2.0"
# crates.io
description = "A library which supplies mathematics and algorithms for manipulating beziers."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skia-safe = { version = ">0.0", optional = true }
flo_curves = "0.6"
kurbo = "0.8"
#flo_curves = { path = "../flo_curves" } # for development
xmltree = "0.10"
plist = "1.3"
log = "0.4"
#itertools = "0.10"

# Our modules
glifparser = { version = "1.2.5-1", default-features = false }
#glifparser = { path = "../glifparser.rlib" } # for development

[features]
default = ["glifparser/mfek"]
strict = []
skia = ["skia-safe", "glifparser/skia"]
