[package]
name = "MFEKmath"
version = "0.1.2"
authors = ["Matthew Blanchard <matthewrblanchard@gmail.com>", "Fredrick R. Brennan <copypasteⒶkittens.ph>", "MFEK Authors"]
edition = "2018"
license = "Apache-2.0"
# crates.io
description = "A library which supplies mathematics and algorithms for manipulating beziers."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skia-safe = { version = ">0.0", optional = true }
flo_curves = "0.6"
kurbo = { git = "https://github.com/MFEK/kurbo.rlib", branch = "master" }
#flo_curves = { path = "../flo_curves" } # for development
xmltree = "0.10"
plist = "1.3"
log = "0.4"
#itertools = "0.10"
spline = { git = "https://github.com/MFEK/spline.rlib", features = ["serde"] }

# Our modules
glifparser = { git = "https://github.com/MFEK/glifparser.rlib", features = ["glifserde"], branch = "master", default-features = false }
#glifparser = { path = "../glifparser.rlib" } # for development
fontforge-typeconv = { git = "https://github.com/MFEK/fontforge-typeconv.rlib", branch = "main", default-features = false, optional = true }
#fontforge-typeconv = { path = "../fontforge-typeconv.rlib", optional = true } # for development

[features]
default = ["skia-safe", "glifparser/skia", "glifparser/mfek"]
fontforge = ["fontforge-typeconv"]
strict = []
skia = ["skia-safe", "glifparser/skia"]
